Fix last item cutoff bug

--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -17,3 +17,8 @@
 footer {
     background-color: rgb(255,255,255);
 }
+
+body {
+    padding-top: 10px;
+    padding-bottom: 122px;
+}
